# SF

./: .gitignore  BUILD.md  FEATURES.md  PRD.md  README.md  Schema.md  progress.txt  pyproject.toml  requirements.txt  songfactory.spec
docs/: cloud-sync-design.md
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  convert_icons.py
songfactory/: ai_models.py  api_client.py  app.py  database.py  event_bus.py  export_import.py  icon.icns  logging_config.py  lore_summarizer.py  main.py  platform_utils.py  requirements.txt  secure_config.py  seed_data.py  theme.py  timeouts.py  validators.py  web_search.py
songfactory/automation/: api_worker.py  atomic_io.py  audio_converter.py  base_worker.py  browser_profiles.py  browser_worker.py  cd_art_generator.py  cd_burn_worker.py  chrome_bridge.py  cover_art_preparer.py  data_session_builder.py  distributor_base.py  distrokid_driver.py  distrokid_worker.py  download_manager.py  history_importer.py  image_generator.py  iso_builder.py  lalals_driver.py  network_sniffer.py  pipeline_diagnostics.py  (+7 more)
tests/: conftest.py  test_ai_models.py  test_analytics.py  test_artists.py  test_atomic_io.py  test_browser_profiles.py  test_database.py  test_distributor_base.py  test_download_validation.py  test_event_bus.py  test_export_import.py  test_image_generator.py  test_iso_builder.py  test_lore_deep.py  test_platform_utils.py  test_retry.py  test_secure_config.py  test_seed_data.py  test_selector_health.py  test_tabs_smoke.py  test_tags.py  test_theme.py  test_timeouts.py  test_validators.py  test_widgets.py  test_xvfb_manager.py
(+21 files in other folders)
